adjust container height to prevent last card from going off screen

--- a/source/assets/css/4-pages/_cards.sass
+++ b/source/assets/css/4-pages/_cards.sass
@@ -9,7 +9,7 @@ section
     align-items: center
     justify-content: space-between
     margin: 50px
-    max-height: 900px
+    max-height: 950px
     overflow: hidden
 
 
